# Advent-of-FPGA-2025

./: .gitignore  LICENSE  README.md
day01/: README.md  advent_of_fpga_2025_day01.opam  dune  dune-project  hardware_core.ml  parser.ml  simulator.ml
day02/: README.md
